--- a/app/src/main/res/layout/fragment_ho_so_benh_an.xml
+++ b/app/src/main/res/layout/fragment_ho_so_benh_an.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/hoSoBenhAn"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.fragment.HoSoBenhAnFragment">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Hồ sơ bệnh án"
-    />
+    <com.google.android.material.progressindicator.LinearProgressIndicator
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        >
+
+    </com.google.android.material.progressindicator.LinearProgressIndicator>
 </FrameLayout>
