--- a/app/src/main/res/menu/side_menu.xml
+++ b/app/src/main/res/menu/side_menu.xml
@@ -1,46 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-<!--    <item-->
-<!--        android:id="@+id/loginFragment"-->
-<!--        android:title="@string/dang_nhap"-->
-<!--        android:icon="@drawable/baseline_login_24"-->
-<!--        >-->
-<!--    </item>-->
-<!--    <item-->
-<!--        android:id="@+id/hoSoBenhAnFragment"-->
-<!--        android:title="@string/ho_so_ben_an"-->
-<!--        android:icon="@drawable/baseline_article_24"-->
+    <!--    <item-->
+    <!--        android:id="@+id/loginFragment"-->
+    <!--        android:title="@string/dang_nhap"-->
+    <!--        android:icon="@drawable/baseline_login_24"-->
+    <!--        >-->
+    <!--    </item>-->
+    <!--    <item-->
+    <!--        android:id="@+id/hoSoBenhAnFragment"-->
+    <!--        android:title="@string/ho_so_ben_an"-->
+    <!--        android:icon="@drawable/baseline_article_24"-->
 
-<!--        >-->
-<!--    </item>-->
-<!--    <item-->
-<!--        android:id="@+id/toDieuTriFragment"-->
-<!--        android:title="@string/to_dieu_tri"-->
-<!--        android:icon="@drawable/baseline_assessment_24"-->
-<!--        >-->
-<!--    </item>-->
+    <!--        >-->
+    <!--    </item>-->
+    <!--    <item-->
+    <!--        android:id="@+id/toDieuTriFragment"-->
+    <!--        android:title="@string/to_dieu_tri"-->
+    <!--        android:icon="@drawable/baseline_assessment_24"-->
+    <!--        >-->
+    <!--    </item>-->
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/helpFragment"
-            android:title="@string/help_fragment"
-            android:icon="@drawable/baseline_question_mark_24"
-            >
-        </item>
+            android:id="@+id/patientInfo"
+            android:icon="@drawable/baseline_person_24"
+            android:iconTint="@color/primaryLight"
+            android:title="@string/thong_tin_tai_khoan" />
     </group>
-    <item
-        android:title="Support">
-            <menu>
-                <group android:checkableBehavior="single">
+    <item android:title="@string/tinh_nang">
+        <menu>-->
+            <group android:checkableBehavior="single">
+                <item
+                    android:id="@+id/danhSachToDieuTri"
+                    android:icon="@drawable/to_dieu_tri"
+                    android:title="@string/to_dieu_tri" />
+                <item
+                    android:id="@+id/hoSoBenhAn"
+                    android:icon="@drawable/ho_so_benh_an"
+                    android:title="@string/ho_so_benh_an" />
                 <item
                     android:id="@+id/helpFragment"
                     android:title="@string/help_fragment"
                     android:icon="@drawable/baseline_question_mark_24"
                     >
                 </item>
-                </group>
-            </menu>
-
+            </group>
+        </menu>
     </item>
-</menu>
-<!--    app:showAsAction="always"-->
+    <!--    <item-->
+    <!--        android:title="Support">-->
+    <!--            <menu>-->
+    <!--                <group android:checkableBehavior="single">-->
+    <!--                <item-->
+    <!--                    android:id="@+id/helpFragment"-->
+    <!--                    android:title="@string/help_fragment"-->
+    <!--                    android:icon="@drawable/baseline_question_mark_24"-->
+    <!--                    >-->
+    <!--                </item>-->
+    <!--                </group>-->
+    <!--            </menu>-->
+
+    <!--    </item>-->
+</menu><!--    app:showAsAction="always"-->
